--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 @charset "UTF-8";
 
+/*-------------------------
+  初期値　※虫生さんお願いできますか？？？？？
+-------------------------*/
 
+
+
+
+/*-------------------------
+  グローバル　※村岡担当します！！！以下は随時担当割しましょう
+-------------------------*/
+
+
+
+
+
+
+
+
+
+
+/*-------------------------
+  トップ　　
+-------------------------*/
+
+
+
+
+/*-------------------------
+セカンド
+-------------------------*/
+
+
+
+
+
+
+/*-------------------------
+  メニュー
+-------------------------*/
+
+
+
+
+
+
+/*-------------------------
+  お問い合わせ
+-------------------------*/
